--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-.nide
+.idea/Nodejs.iml .idea/dictionaries .idea/encodings.xml .idea/inspectionProfiles .idea/misc.xml .idea/modules.xml .idea/scopes .idea/vcs.xml .idea/workspace.xml
