Change the project name and Set it default project for all snippet code sets

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.idea/Nodejs.iml .idea/dictionaries .idea/encodings.xml .idea/inspectionProfiles .idea/misc.xml .idea/modules.xml .idea/scopes .idea/vcs.xml .idea/workspace.xml
+.idea/Nodejs.iml 
+.idea/dictionaries 
+.idea/encodings.xml 
+.idea/inspectionProfiles 
+.idea/misc.xml 
+.idea/modules.xml 
+.idea/scopes 
+.idea/vcs.xml 
+.idea/workspace.xml
